Salesforce/force-app/main/default/objects/Form_Type_to_Declaration__mdt/Form_Type_to_Declaration__mdt.object-meta.xml
<CustomObject>
    <description>Maps Form Types or aliases to the expected declaration configuration</description>
    <label>Form Type to Declaration</label>
    <pluralLabel>Form Types to Declarations</pluralLabel>
</CustomObject>