Salesforce/force-app/main/default/objects/Form_Type_to_Declaration__mdt/fields/Declaration_Metadata_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Metadata_Configuration__c</fullName>
    <inlineHelpText>The Declaration Metadata configuration to be used when declaring forms etc of this label name</inlineHelpText>
    <label>Declaration Metadata Configuration</label>
    <referenceTo>Declaration_Metadata_Configuration__mdt</referenceTo>
    <relationshipLabel>Form Types to Declarations</relationshipLabel>
    <relationshipName>Form_Types_to_Declarations</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>