Salesforce/force-app/main/default/objects/Form_Type_to_Declaration__mdt/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <inlineHelpText>The value to use instead of the parent metadata value</inlineHelpText>
    <label>Document Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>