Salesforce/force-app/main/default/objects/Form_Type_to_Declaration__mdt/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName>
    <inlineHelpText>The form type code to map</inlineHelpText>
    <label>Form Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>