Salesforce/force-app/main/default/objects/Form_Type_to_Declaration__mdt/fields/MoreDetailedName__c.field-meta.xml
<CustomField>
    <fullName>MoreDetailedName__c</fullName>
    <inlineHelpText>The value to use instead of the parent metadata value</inlineHelpText>
    <label>MoreDetailedName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>