Salesforce/force-app/main/default/objects/Form_Type_to_Declaration__mdt/fields/Override_Values__c.field-meta.xml
<CustomField>
    <fullName>Override_Values__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If Enabled Values will be overridden on the parent metadata from this record</inlineHelpText>
    <label>Override Values</label>
    <type>Checkbox</type>
</CustomField>