Salesforce/force-app/main/default/objects/Form_Type_to_Declaration__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Form_Type__c</columns>
    <columns>Declaration_Metadata_Configuration__c</columns>
    <columns>Override_Values__c</columns>
    <columns>Document_Type__c</columns>
    <columns>MoreDetailedName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>